kubernetes/raspberry/media/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-gateway-ingress
  namespace: media
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
